--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -44,10 +44,10 @@ body {
 }
 
 /* hero section */
-.hero-section {
+.App .hero-section {
     display: grid;
     grid-template-columns: 2fr 1fr  ;
-    column-gap: 2rem;
+    column-gap: 1.5rem;
     padding: 30px 45px;
     margin-top: 2.5rem;
 }
