page refreshes after creating and deleting post

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -93,4 +93,5 @@ form input {
 .post-card .cta-section {
     display: inline-flex;
     justify-content: space-between;
+    align-content: center;
 }
