auto reload on create working

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -6,6 +6,7 @@
     --third-color : #D2DAFF;
     --forth-color : #EEF1FF;
     --dark-color : #16213E;
+    --something : rgb(250,79,50);
 }
 
 * {
